# fog-computing

./: .gitignore  Dockerfile  Makefile  README.md  cloud-server.py  pyproject.toml  sensor-device-one.py
client/: sensor-device-one.py
cloud/: cloud-server.py
