[virtualenvs]
in-project = true

[tool.poetry]
name = "fog-computing-prototype"
version = "0.1.0"
description = ""
authors = ["filiprejmus <rejmusfilip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^1.10.9"
pyzmq = "25.0.1"
numpy = "^1.25.1"
pyside6 = "^6.5.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"